# pyasic

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CFG-Util-README.md  Dockerfile  README.md  board_util.py  config_tool.py  dev-requirements.txt  main.py  make_board_tool_exe.py  make_cfg_tool_exe.py  mkdocs.yml  powerScan.py  pyproject.toml  requirements.txt  settings.py  settings.toml  tests.py  web_monitor.py  web_testbench.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
API/: __init__.py  bmminer.py  bosminer.py  btminer.py  cgminer.py  unknown.py
cfg_util/: __init__.py  func.py  layout.py  miner_factory.py  ui.py
cfg_util/cfg_util_sg/: __init__.py  layout.py  ui.py
cfg_util/cfg_util_sg/func/: files.py  miners.py  ui.py
cfg_util/func/: __init__.py  data.py  files.py  miners.py  ui.py
config/: __init__.py  bos.py  config_class.py  miner_config.py  sample_config_cgminer
data/: __init__.py
docs/: api.md  generate_miners.py  index.md  miner_factory.md  miner_network.md  requirements.txt
docs/API/: api.md  bfgminer.md  bmminer.md  bosminer.md  btminer.md  cgminer.md  luxminer.md  unknown.md
docs/config/: miner_config.md
docs/data/: error_codes.md  miner_data.md
docs/miners/: base_miner.md  functions.md  miner_factory.md  supported_types.md
docs/miners/antminer/: HS3.md  X15.md  X17.md  X19.md  X21.md  X3.md  X5.md  X7.md  X9.md
docs/miners/auradine/: AD.md  AI.md  AT.md
docs/miners/avalonminer/: A10X.md  A11X.md  A12X.md  A15X.md  A7X.md  A8X.md  A9X.md  Q.md  nano.md
docs/miners/backends/: bfgminer.md  bmminer.md  bosminer.md  btminer.md  cgminer.md  epic.md  hiveon.md  luxminer.md  vnish.md
docs/miners/bitaxe/: BM.md
docs/miners/blockminer/: blockminer.md
docs/miners/braiins/: BMM.md
docs/miners/elphapex/: DGX.md
docs/miners/goldshell/: Byte.md  CKX.md  HSX.md  KDX.md  (+5 more)
docs/network/: miner_network.md  miner_network_range.md
docs/rpc/: api.md  bfgminer.md  bmminer.md  bosminer.md  btminer.md  cgminer.md  luxminer.md  unknown.md
docs/settings/: settings.md
docs/web/: antminer.md  api.md  auradine.md  epic.md  goldshell.md  innosilicon.md  marathon.md  vnish.md
logger/: __init__.py
miner_interface/API/: __init__.py  bmminer.py  bosminer.py  btminer.py  cgminer.py  unknown.py
miner_interface/data/: __init__.py
miner_interface/logger/: __init__.py
miner_interface/miners/: __init__.py  miner_factory.py  unknown.py
miner_interface/misc/: bos.py
miner_interface/network/: __init__.py
miner_interface/settings/: settings.toml
miners/: __init__.py  bmminer.py  bosminer.py  btminer.py  cgminer.py  miner_factory.py  miner_listener.py  unknown.py  unknown_miner.py
miners/_backends/: bmminer.py  bosminer.py  bosminer_old.py  btminer.py  cgminer.py  hiveon.py
miners/avalonminer/: __init__.py
miners/whatsminer/: M20.py  M21.py  M30.py  M31.py  M32.py
misc/: bos.py
network/: __init__.py  net_range.py
pyasic/: __init__.py  test.py
pyasic-umhost/config/: base.py  fans.py  temperature.py
pyasic-umhost/data/: fans.py
pyasic-umhost/miners/: base.py
pyasic-umhost/rpc/: bfgminer.py  btminer.py  ccminer.py  gcminer.py
pyasic-umhost/settings/: __init__.py
pyasic-umhost/ssh/: __init__.py
pyasic-umhost/web/: __init__.py  antminer.py  epic.py  hammer.py  luckyminer.py  vnish.py
pyasic/API/: __init__.py  bfgminer.py  bmminer.py  bosminer.py  btminer.py  cgminer.py  luxminer.py  unknown.py
pyasic/config/: __init__.py  base.py  fans.py  frequency.py  mining.py  pools.py  power_scaling.py  scaling.py  temperature.py
pyasic/data/: __init__.py  boards.py  device.py  fans.py  pools.py
pyasic/device/: __init__.py  firmware.py  makes.py  models.py
pyasic/errors/: __init__.py
pyasic/load/: __init__.py
pyasic/logger/: __init__.py
pyasic/miners/: __init__.py  base.py  data.py  factory.py  listener.py  makes.py  miner_factory.py  miner_listener.py  unknown.py
pyasic/misc/: __init__.py  bos.py
pyasic/network/: __init__.py  net_range.py
pyasic/rpc/: __init__.py  antminer.py  avalonminer.py  base.py  bfgminer.py  bmminer.py  bosminer.py  btminer.py  ccminer.py  cgminer.py  gcminer.py  luxminer.py  marathon.py  unknown.py
pyasic/settings/: __init__.py
pyasic/ssh/: __init__.py  antminer.py  base.py  braiins_os.py
pyasic/tests/: __init__.py
pyasic/updater/: __init__.py  bos.py
pyasic/web/: Inno.py  S9.py  X15.py  X17.py  X19.py  X3.py  X5.py  X7.py  __init__.py  antminer.py  auradine.py  avalon.py  avalonminer.py  base.py  bitaxe.py  bosminer.py  elphapex.py  epic.py  espminer.py  goldshell.py  hammer.py  hiveon.py  iceriver.py  inno.py  innosilicon.py  luckyminer.py  marathon.py  mskminer.py  vnish.py
settings/: __init__.py  settings.toml
static/: CFG-Util-README.md
tests/: __init__.py  test_antminer_change_password.py  test_data.py
tests/api_tests/: __init__.py
tests/config_tests/: __init__.py  fans.py  test_boser_25_01.py
tests/local_tests/: README.md  __init__.py  test_antminer_local.py  test_avalon_local.py  test_bitaxe_local.py  test_braiins_serials.py
tests/miners_tests/: __init__.py  test_braiins_os.py  tests_base.py
tests/network_tests/: __init__.py
tests/rpc_tests/: __init__.py
tools/bad_board_util/: __init__.py  layout.py  miner_factory.py  ui.py
tools/bad_board_util_old/: __init__.py  ui.py
tools/cfg_util/: __init__.py  decorators.py  imgs.py  layout.py  tables.py  ui.py
tools/cfg_util_old/: __init__.py
tools/web_monitor/: __init__.py  app.py  index.py  miner_factory.py  requirements.txt  scan_page.py  template.py  web_settings.py  web_settings.toml
tools/web_testbench/: __init__.py  _miners.py  _network.py  app.py  connections.py  feeds.py
(+1717 files in other folders)
