[project]
name = "pyasic"
version = "0.71.0"

description = "A simplified and standardized interface for Bitcoin ASICs."
authors = [{name = "UpstreamData", email = "brett@upstreamdata.ca"}]
repository = "https://github.com/UpstreamData/pyasic"

homepage = "https://docs.pyasic.org"
source = "https://github.com/UpstreamData/pyasic"
documentation = "https://docs.pyasic.org"
issues = "https://github.com/UpstreamData/pyasic/issues"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache 2.0"
license-files = ["LICEN[CS]E.*"]

keywords = [
    "python",
    "asic",
    "bitcoin",
    "whatsminer",
    "antminer",
    "braiins-os",
    "vnish",
    "luxos"
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">3.9, <4.0"
dependencies = [
    "httpx>=0.26.0",
    "asyncssh>=2.17.0",
    "cryptography>=39.0",
    "passlib>=1.7.4",
    "pyaml>=23.12.0",
    "tomli (>=2.2.1,<3.0.0) ; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "aiofiles>=23.2.1",
    "betterproto==2.0.0b7",
    "pydantic>=2.9.2",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
isort = "^5.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mkdocs-material = "^9.5.39"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
